--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <main>
         <div class="card">
             <p class="list-item">Today's To Do</p>
-            <ul id="main-list">
+            <ul id="todo-list">
             </ul>
         </div>
     </main>
