--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do list</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <title>To Do List</title>
 </head>
 <body>
     <main>
         <div class="card">
-            <p class="list-item">Today's To Do</p>
-            <ul id="todo-list">
-            </ul>
+            <div class="list-head">
+                <p>Today's To Do</p>
+                <i class="fas fa-sync"></i>
+            </div>
+            <div class="list-head">
+                <input type="text" placeholder="Add to your list..." id="inputList">
+                <i class="fas fa-level-down-alt" id="enter"></i>
+            </div>
+            <div>
+                <ul id="main-list">
+                </ul>
+            </div>
+            <div class="clear-all">
+                <p><a href="#" id="clear">Clear all completed</a></p>
+            </div>
         </div>
     </main>
 </body>
 </html>
-
