--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <title>To Do List</title>
-</head>
-<body>
-    <main>
-        <div class="card">
-            <div class="list-head">
-                <p>Today's To Do</p>
-                <i class="fas fa-sync"></i>
-            </div>
-            <div class="list-head">
-                <input type="text" placeholder="Add to your list..." id="inputList">
-                <i class="fas fa-level-down-alt" id="enter"></i>
-            </div>
-            <div>
-                <ul id="main-list">
-                </ul>
-            </div>
-            <div class="clear-all">
-                <p><a href="#" id="clear">Clear all completed</a></p>
-            </div>
-        </div>
-    </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DoTask</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <ul>
+        <li><p class="header">DoTask</p></li>
+        <li>
+          <form>
+            <input id="new-task" placeholder="Add a new task ... " />
+            <button id="add-btn" class="icn-btn" type="button">
+              <i class="far fa-plus-square"></i>
+            </button>
+          </form>
+        </li>
+      </ul>
+      <ul class="lists"></ul>
+      <button type="button" id="clear-btn" class="clear-btn">
+        Clear all completed
+      </button>
+    </div>
+  </body>
 </html>
