Add tests using jest mocks

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DoTask</title>
+    <title>To Do List</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <ul>
-        <li><p class="header">DoTask</p></li>
+        <li><p class="header">To Do List</p></li>
         <li>
           <form>
             <input id="new-task" placeholder="Add a new task ... " />
