--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,18 @@
   <body>
     <div class="container">
       <ul>
-        <li><p class="header">To Do List</p></li>
+        <li><p class="title">Today's To Do</p></li>
         <li>
           <form>
-            <input id="new-task" placeholder="Add a new task ... " />
-            <button id="add-btn" class="icn-btn" type="button">
+            <input id="new-todo" placeholder="Add to the List ... " />
+            <button id="add-todo" class="add-icon" type="button">
               <i class="far fa-plus-square"></i>
             </button>
           </form>
         </li>
       </ul>
-      <ul class="lists"></ul>
-      <button type="button" id="clear-btn" class="clear-btn">
+      <ul class="todo-lists"></ul>
+      <button type="button" id="clear-todo" class="clear-todo">
         Clear all completed
       </button>
     </div>
